tests/expectations/compiler/option/optional_in_mapping_fail.out
Error [ETYC0372160]: The type `address?` cannot be or contain an optional type in this position.
    --> compiler-test:6:5
     |
   6 |     mapping optional_balances: address? => Foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372160]: The type `Foo` cannot be or contain an optional type in this position.
    --> compiler-test:6:5
     |
   6 |     mapping optional_balances: address? => Foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
